# 42-libft

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  libft.h  main.c
includes/: iostream.h  libft.h  lists.h  math.h  queue.h  strings.h
srcs/: libft.h
srcs/iostream/: ft_print.c  get_next_line.c
srcs/lists/: CMakeLists.txt
srcs/math/: CMakeLists.txt  ft_abs.c  ft_abs_float.c  ft_absd.c  ft_absf.c  ft_absl.c  ft_absolute.c  ft_max.c  ft_round.c
srcs/memory/: CMakeLists.txt  ft_memcpy.c  ft_memset.c  ft_realloc.c
srcs/queue/: ft_deque_delete.c  ft_deque_pop_elmt.c
srcs/string/: CMakeLists.txt  ft_putchar.c  ft_putnstr.c  ft_wcharlen.c  ft_wputchar.c  ft_wputnstr.c  ft_wputstr.c  ft_wstrlen.c
srcs/strings/: ft_atoi.c  ft_atoi64.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isupper.c  ft_putnbr.c  ft_putnbr_base.c  ft_putnbr_fd.c  ft_putnbrf.c  ft_strisnum.c  ft_strlen.c
